Add report endpoint
